# CashTable

./: .gitignore  Makefile  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
backend/: Dockerfile  Dockerfile.prod  auth.py  config.py  database.py  main.py  models.py  schemas.py
backend/routers/: auth.py  games.py  players.py  session.py  transactions.py
backend/services/: settlement.py
backend/tests/: conftest.py  test_auth.py  test_session_auth.py  test_settlement.py
docs/plans/: 2026-02-22-pin-auth-design.md  2026-02-22-pin-session-auth-design.md  linked-mapping-sprout.md
frontend/: Dockerfile.prod  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: auth.js  games.js  http.js  players.js  session.js  transactions.js
frontend/src/components/: AddPlayerModal.jsx  NewGameModal.jsx  PlayerCard.jsx  PlayerModal.jsx  ProtectedRoute.jsx  TransactionModal.jsx
frontend/src/pages/: GameDetail.jsx  GameList.jsx  Login.jsx  Settlement.jsx
frontend/src/utils/: format.js
