[project]
name = "cashtable"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.129.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "python-jose[cryptography]>=3.3.0",
    "sqlalchemy>=2.0.46",
    "uvicorn[standard]>=0.41.0",
    "bcrypt<4.0.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=9.0.2",
]
